# tf-pwa

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  fit.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  pypi.yml
checks/resolution/: README.md
conda/: meta.yaml
docs/: .gitignore  amplitude.rst  developer.rst  install.rst  tensorflow_version.rst
examples/: ex5_params_trans.py  ex6_helicity_angle.py  ex7_numeric_amplitude.py  ex_params_trans.py
tf_pwa/: __init__.py  adaptive_bins.py  angle.py  applications.py  cov_ten_ir.py  data.py  dfun.py  fit.py  fit_improve.py  fitfractions.py  params_trans.py  particle.py  utils.py  variable.py
tf_pwa/amp/: amp.py  base.py  core.py  dispersion_integral.py  flatte.py  interpolation.py  preprocess.py  time_dep.py
tf_pwa/config_loader/: __init__.py  config_loader.py  data.py  mix_config.py  multi_config.py  plot.py  plotter.py  sample.py
tf_pwa/data_trans/: helicity_angle.py
tf_pwa/experimental/: build_amp.py  wrap_function.py
tf_pwa/generator/: base_generator.py  generator.py
tf_pwa/model/: custom.py  model.py
tf_pwa/tests/: config_binning_chi2.yml  config_bkg.yml  config_cfit.yml  config_no_params.yml  config_plot2.yml  config_ref_amp.yml  config_time_dep.yml  config_time_dep2.yml  config_time_dep3.yml  config_time_dep4.yml  config_time_dep_ft.yml  config_toy2.yml  test_amp.py  test_custum_nll.py  test_full.py  test_lazycall.py  test_linear_interpolation_sampling.py  test_multi_gpu.py  test_preprocessor.py  test_time_dep.py
tutorials/: README.md  save_amp.py
